--- a/01_Git/01_git 명령어정리01.md
+++ b/01_Git/01_git 명령어정리01.md
@@ -508,8 +508,13 @@ Author: 윤선영 <sunday.myday2@gmail.com>
 Date:   Tue Sep 15 15:46:26 2020 +0900
 
     First commit
-    
-# 외부 서버와 연결
+```
+
+
+
+#### 외부 서버와 연결
+
+```shell
 A@DESKTOP-BDHGJBV MINGW64 ~/TIL (master)
 $ git remote # 원격 서버 확인
 
@@ -599,6 +604,4 @@ Total 3 (delta 0), reused 0 (delta 0), pack-reused 0
 To https://github.com/OfficialSeonyeong/TIL.git
    f2e3348..568b5cb  master -> master
 ```
-
-
 
