--- a/08_DataScience/Numpy&Pandas/06_Pandas03.ipynb
+++ b/08_DataScience/Numpy&Pandas/06_Pandas03.ipynb
@@ -1212,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1333,7 +1333,7 @@
        "max      1.000000    3.000000   80.000000    8.000000    6.000000  512.329200"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3349,7 +3349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -3624,7 +3624,7 @@
        "[888 rows x 15 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4031,7 +4031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -4189,7 +4189,7 @@
        "4  Third  child       False  NaN  Southampton    no  False  "
       ]
      },
-     "execution_count": 110,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7024,7 +7024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -7065,7 +7065,6 @@
        "      <th>alive</th>\n",
        "      <th>alone</th>\n",
        "      <th>child_adult</th>\n",
-       "      <th>chile_adult</th>\n",
        "      <th>embark_len</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -7088,7 +7087,6 @@
        "      <td>Southampton</td>\n",
        "      <td>yes</td>\n",
        "      <td>False</td>\n",
-       "      <td></td>\n",
        "      <td>adult</td>\n",
        "      <td>11</td>\n",
        "    </tr>\n",
@@ -7110,7 +7108,6 @@
        "      <td>Southampton</td>\n",
        "      <td>no</td>\n",
        "      <td>True</td>\n",
-       "      <td></td>\n",
        "      <td>adult</td>\n",
        "      <td>11</td>\n",
        "    </tr>\n",
@@ -7132,7 +7129,6 @@
        "      <td>Queenstown</td>\n",
        "      <td>no</td>\n",
        "      <td>True</td>\n",
-       "      <td></td>\n",
        "      <td>adult</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
@@ -7154,7 +7150,6 @@
        "      <td>Southampton</td>\n",
        "      <td>no</td>\n",
        "      <td>True</td>\n",
-       "      <td></td>\n",
        "      <td>adult</td>\n",
        "      <td>11</td>\n",
        "    </tr>\n",
@@ -7176,13 +7171,11 @@
        "      <td>Southampton</td>\n",
        "      <td>no</td>\n",
        "      <td>False</td>\n",
-       "      <td></td>\n",
        "      <td>child</td>\n",
        "      <td>11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -7220,7 +7213,6 @@
        "      <td>Southampton</td>\n",
        "      <td>no</td>\n",
        "      <td>True</td>\n",
-       "      <td></td>\n",
        "      <td>adult</td>\n",
        "      <td>11</td>\n",
        "    </tr>\n",
@@ -7242,7 +7234,6 @@
        "      <td>Southampton</td>\n",
        "      <td>yes</td>\n",
        "      <td>True</td>\n",
-       "      <td></td>\n",
        "      <td>adult</td>\n",
        "      <td>11</td>\n",
        "    </tr>\n",
@@ -7264,7 +7255,6 @@
        "      <td>Southampton</td>\n",
        "      <td>no</td>\n",
        "      <td>False</td>\n",
-       "      <td></td>\n",
        "      <td>adult</td>\n",
        "      <td>11</td>\n",
        "    </tr>\n",
@@ -7286,7 +7276,6 @@
        "      <td>Cherbourg</td>\n",
        "      <td>yes</td>\n",
        "      <td>True</td>\n",
-       "      <td></td>\n",
        "      <td>adult</td>\n",
        "      <td>9</td>\n",
        "    </tr>\n",
@@ -7308,13 +7297,12 @@
        "      <td>Queenstown</td>\n",
        "      <td>no</td>\n",
        "      <td>True</td>\n",
-       "      <td></td>\n",
        "      <td>adult</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>888 rows × 19 columns</p>\n",
+       "<p>888 rows × 18 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -7332,32 +7320,32 @@
        "887    890         0       3    male  32.0      0      0   7.7500        Q   \n",
        "\n",
        "      class    who  adult_male deck  embark_town alive  alone child_adult  \\\n",
-       "0     First  woman       False    C  Southampton   yes  False               \n",
-       "1     Third    man        True  NaN  Southampton    no   True               \n",
-       "2     Third    man        True  NaN   Queenstown    no   True               \n",
-       "3     First    man        True    E  Southampton    no   True               \n",
-       "4     Third  child       False  NaN  Southampton    no  False               \n",
+       "0     First  woman       False    C  Southampton   yes  False       adult   \n",
+       "1     Third    man        True  NaN  Southampton    no   True       adult   \n",
+       "2     Third    man        True  NaN   Queenstown    no   True       adult   \n",
+       "3     First    man        True    E  Southampton    no   True       adult   \n",
+       "4     Third  child       False  NaN  Southampton    no  False       child   \n",
        "..      ...    ...         ...  ...          ...   ...    ...         ...   \n",
-       "883  Second    man        True  NaN  Southampton    no   True               \n",
-       "884   First  woman       False    B  Southampton   yes   True               \n",
-       "885   Third  woman       False  NaN  Southampton    no  False               \n",
-       "886   First    man        True    C    Cherbourg   yes   True               \n",
-       "887   Third    man        True  NaN   Queenstown    no   True               \n",
+       "883  Second    man        True  NaN  Southampton    no   True       adult   \n",
+       "884   First  woman       False    B  Southampton   yes   True       adult   \n",
+       "885   Third  woman       False  NaN  Southampton    no  False       adult   \n",
+       "886   First    man        True    C    Cherbourg   yes   True       adult   \n",
+       "887   Third    man        True  NaN   Queenstown    no   True       adult   \n",
        "\n",
-       "    chile_adult  embark_len  \n",
-       "0         adult          11  \n",
-       "1         adult          11  \n",
-       "2         adult          10  \n",
-       "3         adult          11  \n",
-       "4         child          11  \n",
-       "..          ...         ...  \n",
-       "883       adult          11  \n",
-       "884       adult          11  \n",
-       "885       adult          11  \n",
-       "886       adult           9  \n",
-       "887       adult          10  \n",
+       "     embark_len  \n",
+       "0            11  \n",
+       "1            11  \n",
+       "2            10  \n",
+       "3            11  \n",
+       "4            11  \n",
+       "..          ...  \n",
+       "883          11  \n",
+       "884          11  \n",
+       "885          11  \n",
+       "886           9  \n",
+       "887          10  \n",
        "\n",
-       "[888 rows x 19 columns]"
+       "[888 rows x 18 columns]"
       ]
      },
      "metadata": {},
@@ -7366,12 +7354,150 @@
    ],
    "source": [
     "#if ~ else 절을 활용하여 나이가 15세 이하면 child 그렇지 않으면 adult로 구분하는 child_adult 열 추가\n",
-    "titanic_reset_index_df['chile_adult'] = titanic_reset_index_df['age'].apply(lambda x : 'child' if x <15 else 'adult')\n",
+    "titanic_reset_index_df['child_adult'] = titanic_reset_index_df['age'].apply(lambda x : 'child' if x <15 else 'adult')\n",
     "\n",
     "# embark_town의 문자열 개수를 별도의 열(embark_len)로 추가\n",
     "titanic_reset_index_df['embark_len'] = titanic_reset_index_df['embark_town'].apply(lambda x : len(str(x)))\n",
     "\n",
     "display(titanic_reset_index_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "adult      606\n",
+       "elderly    199\n",
+       "child       83\n",
+       "Name: age_division, dtype: int64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# age 15세 이하는 child, 15~60세는 adult, 61 ~ 는 elderly 로 분류하여 age_division 열에 저장\n",
+    "# lambda 식으로 apply함수 구현\n",
+    "titanic_reset_index_df['age_division'] = titanic_reset_index_df['age'].apply(lambda x: 'child' if x <= 15 else ('adult' if x<=60 else 'elderly'))\n",
+    "\n",
+    "titanic_reset_index_df['age_division'].value_counts() \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 나이에 따라 세분화 분류를 수행하는 함수 생성\n",
+    "def get_category(age):\n",
+    "    category=''\n",
+    "    if age <= 5:\n",
+    "        category='baby'\n",
+    "    elif age <=12:\n",
+    "        category='child'\n",
+    "    elif age <=19:\n",
+    "        category='teenager'\n",
+    "    elif age <=24:\n",
+    "        category='student'\n",
+    "    elif age <=39:\n",
+    "        category='young adult'\n",
+    "    elif age <=60:\n",
+    "        category='adult'\n",
+    "    else:\n",
+    "        cateogory='elderly'\n",
+    "    return category"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "young adult    272\n",
+       "               199\n",
+       "adult          141\n",
+       "student        112\n",
+       "teenager        95\n",
+       "baby            44\n",
+       "child           25\n",
+       "Name: age_category, dtype: int64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "titanic_reset_index_df['age_category'] = titanic_reset_index_df['age'].apply(lambda x: get_category(x))\n",
+    "titanic_reset_index_df['age_category'].value_counts() "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- apply() 함수에 dataframe 이 넘어온다면"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "adult    547\n",
+       "child    341\n",
+       "Name: child/adult, dtype: int64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "titanic_reset_index_df['child/adult'] = titanic_reset_index_df.apply(lambda f: 'adult' if f.age >= 20 else 'child', axis=1)\n",
+    "titanic_reset_index_df['child/adult'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "male      363\n",
+       "child     341\n",
+       "female    184\n",
+       "Name: cat, dtype: int64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 승객에 대한 나이와 성별에 의한 카테고리 cat 으로 추가\n",
+    "# 조건1. 20살이 넘으면 성별을 그대로 사용, 20살 미만이면 성별에 관계없이 'child'라고 정의\n",
+    "titanic_reset_index_df['cat']= titanic_reset_index_df.apply(lambda x: x.sex if x.age >= 20 else 'child', axis=1)\n",
+    "titanic_reset_index_df['cat'].value_counts()"
    ]
   }
  ],
