[21.06.04] Deep Learning Study - tensor 02

--- a/수료후데이터분석공부/처음부터 시작하는 딥러닝 유치원/02. tensor_operations.ipynb
+++ b/수료후데이터분석공부/처음부터 시작하는 딥러닝 유치원/02. tensor_operations.ipynb
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -474,22 +474,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([1, 1, 2])\n",
-      "torch.Size([2])\n"
+      "torch.Size([1, 2])\n",
+      "torch.Size([2, 1])\n"
      ]
     }
    ],
    "source": [
-    "x = torch.FloatTensor([[[1,2]]])\n",
-    "y = torch.FloatTensor([3,\n",
-    "                      5])\n",
+    "x = torch.FloatTensor([[1,2]])\n",
+    "y = torch.FloatTensor([[3],\n",
+    "                      [5]])\n",
     "\n",
     "print(x.size())\n",
     "print(y.size())"
@@ -497,10 +497,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[4., 5.],\n",
+      "        [6., 7.]])\n",
+      "torch.Size([2, 2])\n"
+     ]
+    }
+   ],
+   "source": [
+    "z = x + y\n",
+    "print(z)\n",
+    "print(z.size())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3) Cautions\n",
+    "예기치 않게 실수가 발생했는데 Broadcast 기능 때문에 잘못된 값으로 리턴되어 디버그 과정이 어려워지는 경우\n",
+    "\n",
+    "#### Failure Case"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 2, 2])\n",
+      "torch.Size([3, 3])\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = torch.FloatTensor([[[1, 2],\n",
+    "                      [4,8]]])\n",
+    "y = torch.FloatTensor([[1,2,3],\n",
+    "                      [4,5,6],\n",
+    "                      [7,8,9]])\n",
+    "\n",
+    "print(x.size())\n",
+    "print(y.size())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "The size of tensor a (2) must match the size of tensor b (3) at non-singleton dimension 2",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-31-8c8f78e0676d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mz\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m: The size of tensor a (2) must match the size of tensor b (3) at non-singleton dimension 2"
+     ]
+    }
+   ],
+   "source": [
+    "z = x + y"
+   ]
   }
  ],
  "metadata": {
