[21.07.12] Machine Learning - recommandation system: 잠재요인

--- a/수료후데이터분석공부/Machine Learning/추천시스템_01. 잠재 요인 협업 필터링.ipynb
+++ b/수료후데이터분석공부/Machine Learning/추천시스템_01. 잠재 요인 협업 필터링.ipynb
@@ -6460,13 +6460,7 @@
       "### iteration step:  520 rmse:  0.016736510242370807\n",
       "### iteration step:  520 rmse:  0.016440603255752365\n",
       "### iteration step:  520 rmse:  0.016565765240228455\n",
-      "### iteration step:  520 rmse:  0.016642915317113118\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "### iteration step:  520 rmse:  0.016642915317113118\n",
       "### iteration step:  520 rmse:  0.01688897827896346\n",
       "### iteration step:  521 rmse:  0.01690501976478748\n",
       "### iteration step:  521 rmse:  0.017032691224840697\n",
@@ -12406,7 +12400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
