[21.07.13] Deep Learning Study - Representation Learning

--- a/수료후데이터분석공부/[Lectures]딥러닝을 활용한 자연어처리 입문/Part 1. 딥러닝 초급/02. Representation Learning.md
+++ b/수료후데이터분석공부/[Lectures]딥러닝을 활용한 자연어처리 입문/Part 1. 딥러닝 초급/02. Representation Learning.md
@@ -37,3 +37,11 @@
   - 디코더는 중간 결과물(z)의 정보를 입력과 같아지도록 압축 해제(복원) 수행
 
 - 복원을 성공적으로 하기 위해 오토 인코더(auto encoder)는 특징(feature)을 추출하는 방법을 자동으로 학습
+
+
+
+## 04. Hidden Representations
+
+- 인코더의 결과물 z를 plot 하면 비슷한 샘플들은 비슷한 곳에 위치하게 된다. → 이 공간을 hidden(latent) space라고 한다.
+- 각 레이어의 결과물을 hidden vector라고 부른다.
+- 해석이 불가능하다. 하지만 비슷한 특징을 가진 샘플은 비슷한 hidden vector를 가진다.
