[21.07.19] Deep Learning Study - CNN & RNN

--- a/수료후데이터분석공부/[Lectures]딥러닝을 활용한 자연어처리 입문/Part 1. 딥러닝 초급/07. Computer Vision Introductions.md
+++ b/수료후데이터분석공부/[Lectures]딥러닝을 활용한 자연어처리 입문/Part 1. 딥러닝 초급/07. Computer Vision Introductions.md
@@ -82,3 +82,19 @@ Resnet: 레이어가 깊어질수록 높은 성능
 1. Set seed weights and train as normal
 2. Fix loaded weights (freeze) and train unloaded parts
 3. Train with different learning rate on each part
+
+
+
+## 05. 실습 브리핑
+
+강아지와 고양이 구별: Binary Classification
+
+torchvision.models에 사전 구현된 모델을 가져와 Transfer Learning
+
+Random Init 학습, Pretrained weight를 가지고 학습, Freezed하고 마지막 레이어만 더해 학습하는 방법 중 Freezed 학습법이 젤 성능이 좋았다.
+
+
+
+## 06. 실습 백본 네트워크를 활용한 전이학습
+
+visual studio code로 진행
