[21.07.21] Deep Learning Study - RNN & career information

--- a/수료후데이터분석공부/[Lectures]딥러닝을 활용한 자연어처리 입문/Part 1. 딥러닝 초급/08. Recurrent Neural Networks.md
+++ b/수료후데이터분석공부/[Lectures]딥러닝을 활용한 자연어처리 입문/Part 1. 딥러닝 초급/08. Recurrent Neural Networks.md
@@ -104,3 +104,102 @@ $$
 - NLG, Machine Translation
 - One-to-Many case
 - Bidirectional RNN 사용 불가
+
+
+
+## 04. RNN에서의 Back-propagation (BPTT)
+
+**FC layers**에서는 hidden state가 더해져 마지막 y_hat을 구한다. y 값과의 loss 값을 구한 뒤 경로 별로 back propagation 되어 gradient가 더해진다.
+
+**Many to One**에서는 동일한 parameter의 gradient를 모두 더해서 구한다. sequence의 길이가 길면 또는 time stamp의 길이가 길면 gradient의 크기가 커진다.
+
+**Many to Many**에는 모든 time-step에 대해 y_hat 값이 나온다. 모든 값의 loss를 더해 back propagation 수행, 하나의 time-step에서 도출되는 두 가지 값 모두 더해진다.
+
+**Many to Many with Multi-layered RNN**에는 한 셀마다 경로가 많다. 이 모든 값이 다 더해진다.
+
+RNN은 TanH를 사용하는데 깊은 네트워크를 구축할 때 여러 번 사용하게 되어 Gradient Vanishing 문제를 일으키게 된다. ThnH는 0일 때를 제외하고 Gradient가 1보다 작다. ⇒ 긴 시퀀스의 학습이 어려워진다.
+
+
+
+## 05. 수식 BPTT
+
+<img src="..\Images\RNN_수식 BPTT_Many to One.PNG" style="zoom:60%;" />
+
+
+
+<img src="..\Images\RNN_수식 BPTT_Many to Many.PNG" style="zoom:60%;" />
+
+
+
+### Gradient Vanishing
+
+$$
+{\alpha L(\theta) \over \alpha \psi} = \sum_{t=1} ^T {\alpha L(\theta) \over \alpha \hat y_4 } {\alpha \hat y_4 \over \alpha h_4} (\Pi_{i=t}^{T-1} {\alpha h_{i+1} \over \alpha h_i}) {\alpha h_t \over \alpha \psi} \\ {\alpha h_{t+1} \over \alpha h_t} \le 1
+$$
+
+
+
+## 06. Long-Short Term Memory (LSTM)
+
+RNN 내부에는 tanh가 있어 time-step이 길어짐에 따라 gradient vanishing이 발생한다.
+
+⇒ **Sigmoid를 활용한 Gate**
+
+Sigmoid는 0과 1사이의 값을 반환하므로, sigmoid를 곱하면 마치 문을 열고 닫는 듯한 효과를 낼 수 있다.
+$$
+y = \sigma (x) \times f(x)
+$$
+
+- LSTM은 weight parameter가 많고 무거워서 굉장히 복잡하다.
+
+
+
+### Gated Recurrent Unit(GRU)
+
+- LSTM보다 훨씬 가볍다.
+- 그러나 실제로 LSTM이 더 널리 쓰이는 추세
+- LSTM은 vanilla RNN에 비해 훨씬 많은 파라미터를 가진다. ⇒ 더 많은 학습 데이터와 학습 시간이 필요
+- Gradient Vanishing 문제를 해결했지만, 무조건 긴 데이터를 모두 기억할 수 있는 것은 아니다. ⇒ Attention을 통해 이를 해결할 수 있다.
+
+
+
+## 07. Gradient Vanishing과 LSTM
+
+- 포겟 게이트 레이어가 열고 닫으면서 배우는 거에 따라 미분 → gradient vanishing 어느 정도 해결
+- 하지만, layer를 깊게 구축할 때도 Gradient Vanishing 문제가 생긴다.
+
+
+
+## 08. 실습 브리핑
+
+Bidirectional RNN 사용 ← 한번에 데이터를 모두 학습하기 때문
+
+마지막 time-step의 출력 (batch_size, 1, hidden_size * 2)
+
+
+
+## 09. 실습 LSTM으로 MNIST 분류 구현하기
+
+visual studio code로 진행
+
+
+
+## 10. Gradient Clipping
+
+- RNN은 BPTT 알고리즘에 따라, time-step이 많아질수록 gradient의 덧셈이 많아짐 → 시퀀스가 길어지면 gradient가 커진다.
+
+- 시퀀스의 길이에 따라 적절한 learning rate를 바꾸는 방법 적용 ⇒ **Gradient Clipping**
+
+- $$
+  {||\triangledown_\theta L(\theta)||_2 \over \tau} = k
+  $$
+
+- Threshold와의 크기 비교, k의 값 활용
+
+- k가 1보다 크면, k로 나눠주면 방향은 유지하고 기울기 크기만 줄어든다. → 원래 크기로서는 1 step이 커서 minimum을 놓칠 수 있는데 안정적인 step 크기로 만들어준다.
+
+- learning rate보다 threshold의 크기를 튜닝한다.
+
+- 시퀀스의 길이에 따라 gradient의 크기가 달라져 gradient exploding 예방한다.
+
+- Adam optimizer를 사용할 경우 큰 필요가 없다.
