[21.07.26] Deep Learning Study - NLP intro

--- a/수료후데이터분석공부/[Lectures]딥러닝을 활용한 자연어처리 입문/Part 2. 자연어처리 입문/02. Introduction.md
+++ b/수료후데이터분석공부/[Lectures]딥러닝을 활용한 자연어처리 입문/Part 2. 자연어처리 입문/02. Introduction.md
@@ -24,3 +24,66 @@
 - 단어를 continuous value로 변환 (ex. Word2Vec)
 - End-to-end 시스템 추구
 - 디버깅 어려움
+
+
+
+### Paradigm Shift in NLP
+
+- 효율적인 Embedding을 통한 성능 개선
+- End-to-end 구성으로 인한 효율/성능 개선
+
+
+
+## 03. 자연어처리와 다른 분야의 차이점
+
+- Discrete value를 다룬다.
+- 분류 문제로 접근할 수 있다.
+- 샘플의 확률 값을 구할 수 있다.
+- GAN 적용 불가
+- Domain Knowledge인 언어적 지식 필요
+- 전처리 과정이 어렵다.
+
+
+
+## 04. 왜 자연어처리는 어려운가
+
+1. Ambiguity - 중의성, 문장 내 정보 부족
+2. Paraphrase -  같은 의미를 여러 다양한 문장으로 표현 가능
+3. Discrete, not Continuous
+
+
+
+## 05. 왜 한국어 자연어처리는 더 어려운가
+
+**교착어 -** 어간에 접사가 붙어 단어를 이루고 의미와 문법적 기능이 정해짐 → 한국어
+
+**굴절어 -** 단어의 형태가 변함으로써 문법적 기능이 정해짐 → 라틴어, 독일어, 러시아어
+
+**고립어** - 어순에 따라 단어의 문법적 기능이 정해짐 → 영어, 중국어
+
+
+
+### 한국어의 특징
+
+- 접사 추가에 따른 의미 파생
+- 유연한 단어 순서 규칙
+- 모호한 띄어쓰기
+- 평서문과 의문문의 차이 부재
+- 주어 부재
+- 한자 기반의 언어(표의 문자인 한자 → 표음 문자인 한글)
+
+
+
+## 06. 딥러닝 자연어처리 주제 및 역사
+
+### Before Deep Learning
+
+- 여러 단계의 sub-module로 구성되어 복잡한 디자인 구성
+
+### Before Sequence-to-Sequence
+
+- Text to Numeric values : Word Embedding, Text Classification
+
+### After Sequence-to-Sequence with Attention
+
+- Beyound Text to Numeric
