--- a/수료후데이터분석공부/[Lectures]딥러닝을 활용한 자연어처리 입문/Part 2. 자연어처리 입문/02. Introduction.md
+++ b/수료후데이터분석공부/[Lectures]딥러닝을 활용한 자연어처리 입문/Part 2. 자연어처리 입문/02. Introduction.md
@@ -87,3 +87,23 @@
 ### After Sequence-to-Sequence with Attention
 
 - Beyound Text to Numeric
+
+### Era of Attention
+
+- Transformer by End-to-End Attention
+
+### Pretraining and Fine-tuning
+
+- Transformer 기반 BERT를 활용한 Big Language Models
+
+
+
+## 07. 최근 흐름
+
+- Big Models를 활용해 transfer learning
+- BERT의 개선을 위한 여러 가지 연구 진행
+- 모델의 경량화
+- (Open Domain) Dialogue System - chatbot
+- Question Answering
+- Knowledge Graphs
+- NLG: Machine Transitions → unsupervised approach, machine translations for low-resources
