[21.08.06] Deep Learning Study - tokeninzation

--- a/수료후데이터분석공부/[Lectures]딥러닝을 활용한 자연어처리 입문/Part 2. 자연어처리 입문/03. Preprocessing.md
+++ b/수료후데이터분석공부/[Lectures]딥러닝을 활용한 자연어처리 입문/Part 2. 자연어처리 입문/03. Preprocessing.md
@@ -117,3 +117,112 @@
 - \d: 숫자 ([0-9]와 같음)
 
 - \D : 숫자를 제외한 모든 문자 ([^0-9]와 같음)
+
+
+
+## 05. 실습 정규식 실습
+
+
+
+## 06. 코퍼스 레이블링
+
+- Text Classification (Sentence → Class)
+- Token Classification (Sentence → Sequence)
+- Sequence-to-sequence (Sequence → Sequence)
+
+
+
+## 07. 한, 중, 영, 일 코퍼스 분절 (tokenization)
+
+두 개 이상의 다른 token들의 결합으로 이루어진 단어를 쪼개어, vocabulary 숫자를 줄이고, 희소성(sparseness)을 낮추기 위해 tokenization을 해야 한다.
+
+### 한국어 분절
+
+- 어근에 접사가 붙어 다양한 단어가 파생된다. (교착어)
+- 띄어쓰기 통일의 필요성
+
+### 영어 분절
+
+- NLTK를 사용해 comma 등 후처리
+
+### 중국어/일본어 분절
+
+- 기본적인 띄어쓰기 없음
+
+### 형태소 분석 및 품사 태깅
+
+형태소를 비롯해, 어근, 접두사와 접미사, 품사 등 다양한 언어적 속성의 구조를 파악하는 것이 형태소 분석이다. 형태소의 뜻과 문맥을 고려해 그것에 마크업을 하는 것을 품사 태깅이라고 한다.
+
+### POS Tagger
+
+한국어 - Mecab, KoNLPy
+
+일본어 - KoNLP
+
+중국어 - standard Parser, PKU Parser, Jieba
+
+
+
+## 08. 실습 형태소 분석기를 활용한 분절하기
+
+
+
+## 09. 분절 길이에 따른 장단점
+
+토큰 평균 길이에 따른 성격과 특징
+
+짧을수록
+
+- Vocabulary 크기 감소 → 희소성 문제 감소
+- OoV가 줄어든다.
+- Sequence의 길이가 길어짐 → 모델의 부담 증가
+
+길수록
+
+- Vocabulary 크기 증가 → 희소성 문제 증대
+- OoV가 늘어난다.
+- Sequence의 길이가 짧아짐 → 모델의 부담 감소
+
+*OoV: Out of Vocabulary로, 훈련 데이터 상에는 없지만 테스트 데이터에 존재하는 토큰*
+
+*—특히 NLG, 이전 단어들을기반으로 다음 단어를 예측하는 task에서는 치명적*
+
+정보량에 따른 이상적인 형태
+
+- 빈도가 높을 수록 하나의 token으로 나타내고, 빈도가 낮으면 빈도가 높은 tokens로 구성한다.
+- 압축 알고리즘과 유사
+
+
+
+## 10. 서브워드 분절
+
+subword 는 단어보다 더 작은 의미 단위로 모여 구성
+
+### **Byte Pair Encoding(BPE) 알고리즘**(압축 알고리즘) 활용한 subword segmentation
+
+- 학습 코퍼스를 활용해 BPE 모델 학습 후, 학습/테스트 코퍼스에 적용
+- 장점
+  - 희소성을 통계를 기반하여 효과적으로 낮출 수 있다.
+  - 언어별 특성에 대한 정보 없이, 더 작은 의미 단위로 분절할 수 있다.
+  - OoV를 없앨 수 있다.
+- 단점
+  - 학습 데이터 별로 BPE 모델로 생성됨
+- Training
+  1. 단어 사전 생성 (빈도 포함)
+  2. Character 단위로 분절 후, pair별 빈도 카운트
+  3. 최빈도 pair를 골라 merge 수행
+  4. 3번 반복
+- Applying
+  1. 각 단어를 chracter 단위로 분절
+  2. 단어 내에서 '학습 과정에서 merge에 활용된 pair의 순서대로 merge 수행
+
+Subword Segmentation Modules
+
+- Subword-nmt : https://github.com/rsennrich/subword-nmt
+- SentencePiece: https://github.com/google/sentencepiece
+
+—한국어의 경우, 띄어쓰기가 제멋대로인 경우가 많아서 바로 subword segmentation을 적용하는 것은 위험하다. 형태소 분석기를 통한 tokenization을 진행 후 적용하는 것을 권장
+
+
+
+## 11. 실습 Subword segmentation
