[21.08.12] Deep Learning Study - TorchText

--- a/수료후데이터분석공부/[Lectures]딥러닝을 활용한 자연어처리 입문/Part 2. 자연어처리 입문/03. Preprocessing.md
+++ b/수료후데이터분석공부/[Lectures]딥러닝을 활용한 자연어처리 입문/Part 2. 자연어처리 입문/03. Preprocessing.md
@@ -226,3 +226,160 @@ Subword Segmentation Modules
 
 
 ## 11. 실습 Subword segmentation
+
+
+
+## 12. 분절 복원 (detokenization)
+
+### Tokenization
+
+1. 영어 원문 → 2. tokenization을 수행하고, 기존 띄어쓰기와 구분을 위해 `_` 삽입 → 3. subword segmentation을 수행, 공백 구분 위한 `_` 삽입
+
+### Detokenization
+
+1. whitespace 제거 → 2. `__`을 white space로 치환 → 3. `_`를 제거
+
+
+
+## 13. 실습 분절 복원
+
+```python
+import sys
+
+STR = '_'
+TWO_STR = '__'
+
+def detokenization(line):
+	if TWO_STR in line:
+		line = line.strip().replace(' ', '').replace(STR, '').strip()
+	else:
+		line = line.strip().replace(' ','').replace(STR, ' ').strip()
+	return line
+
+if __name__ == "__main__:":
+	for line in sys.stdin:
+		if line.strip() != "":
+				buf = []
+				for token in line.strip().split('\\t'):
+					buf += [detokenization(token)]
+				sys.stdout.write('\\t'.join(buf) + '\\n')
+			else:
+				sys.stdout.write('\\n')
+```
+
+
+
+## 14. 병렬 코퍼스 정렬 시키기
+
+⇒ Paralled Corpus
+
+### Champollion
+
+- 단어 번역 사전에 기반하여 사전을 최대한 만족하는 sentence align을 찾는 방식
+- Perl로 제작됨
+- ratio parameter의 역할: source 언어의 character 당 target 언어의 character 비율
+
+단어 사전 → MUSE 활용
+
+### [Procedure]
+
+1. Bi-lingual Corpus 정제(노이즈 제거)
+2. Tokenization 수행
+3. 각 언어별 코퍼스에 대해서 word embedding 수행(FastText 활용)
+4. MUSE를 활용하여 word translation dictionary 추출
+5. Champollion을 활용해 align 수행
+
+
+
+## 15. TIP 전처리의 중요성, 경험담
+
+- 오픈 소스 문화의 확산(⇒ Continuous renewal of state of the art)
+- 데이터가 더 큰 자산
+
+
+
+## 16. 미니배치 만들기
+
+1. 빈도 순으로 단어 사전 정렬
+
+2. min_count보다 작은 빈도를 갖는 단어 제외 or max_vocab 에따라 빈도순으로 어휘 제외
+
+3. 필요에 따라 특수 토큰도 어휘 사전에 포함 ex. <BOS>, <EOS>, <UNK>, <PAD>
+
+4. 미니배치의 형태를 `(batch_size, length, |V|)` → `(batch_size, length,1)`
+
+   one-hot 벡터를 다 저장할 필요가 없기 때문
+
+5. Sequence 차원의 크기는 미니배치 내의 가장 긴 문장에 의해 결정된다. → <PAD> 토큰이 필요
+
+   - Increase Training Efficiency → 비슷한 길이의 sequences 별로 chunks 만들기
+   - 그래서 미니배치별로 shuffling해서 학습
+
+
+
+### TorchText
+
+PyTorch 공식 텍스트 로딩용 라이브러리
+
+
+
+### Step 1 :  Define Fields
+
+```python
+self.label = data.Field(sequential=False, use_vocab=True, unk_token=None)
+self.text = data.Field(use_vocab=True, batch_first=True, 
+											 include_lengths=False, eos_token='<EOS>' if use_eos else None)
+```
+
+
+
+### Step 2: Define Dataset with Fields
+
+```python
+train, valid = data.TabularDataset.splits(path='', train=train_fn, validation=valid_fn, 
+																					format='tsv', fields==[('label', self.label), ('text', self.text)])
+```
+
+
+
+### Step 3: Get DataLoaders from Datasets
+
+```python
+self.train_iter, self.valid_iter = data.BucketIterator.splits((train, valid), batch_size=batch_size, 
+																																device='cuda:%d' % device if device >=0 else 'cpu',
+																																shuffle=shuffle, sort_key=lambda x: len(x.text), sort_within_batch=True)
+self.label.build_vocab(train)
+self.text.build_vocab(train, max_size=max_vocab, min_freq=min_freq)						
+```
+
+
+
+After
+
+```python
+vocab_size = len(dataset.text.vocab)
+n_classes = len(dataset.label.vocab)
+print('|vocab| =', vocab_size, '|classes| =', n_classes)
+
+trainer.run(train_loader,max_epochs=self.config.n_epochs)
+```
+
+
+
+## 17. 실습 TorchText
+
+```
+wc -l ./review.sorted.uniq.refined.tok.*
+# 데이터 크기
+
+shuf <review.sorted.uniq.refined.tok.tsv> review.sorted.uniq.refined.tok.shuf.tsv
+# shuffling
+
+head -n 62943 ./review.sorted.uniq.refined.tok.shuf.tsv > review.sorted.uniq.refined.tok.shuf.train.tsv
+# train set 생성
+
+head -n 10000 ./review.sorted.uniq.refined.tok.shuf.tsv > review.sorted.uniq.refined.tok.shuf.test.tsv
+# test set 생성
+```
+
+이후 실습 파일에서 진행
